--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header {
@@ -21,19 +22,19 @@
   }
   &__list-link {
     color: $title;
-    padding-bottom: 1px;
+    padding: 0 2px 1px;
     transition: all 0.4s;
-    @extend %quicksand-400;
+    @extend %roboto-400;
     &:hover {
       color: $accent;
       border-bottom: 1px solid $accent;
-      @extend %quicksand-500;
+      @extend %roboto-700;
     }
   }
   &__list-link--active {
     color: $accent;
     border-bottom: 1px solid $accent;
-    @extend %quicksand-500;
+    @extend %roboto-700;
   }
 }
 
@@ -59,7 +60,6 @@
     line-height: 20px;
   }
 }
-
 
 .footer {
   background-color: $bg;
@@ -135,16 +135,12 @@
     }
   }
   &__form-btn {
+    @extend %btn;
     border: none;
-    text-transform: uppercase;
-    color: #fff;
     padding: 12px 26px;
-    background-color: $accent;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
   }
 }
-
-
 
 .footer-bottom {
   height: 75px;
@@ -158,6 +154,80 @@
     margin-left: 25px;
   }
 }
+
+.top-slider {
+  background-color: $bg;
+  background-image: url(../images/slider/abstract.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 65px 0 45px;
+  &__container {
+    max-width: 1520px;
+  }
+  &__content {
+    padding-left: 160px;
+    padding-top: 125px;
+  }
+  &__item {
+    display: flex !important;
+    justify-content: space-between;
+  }
+  &__title {
+    max-width: 670px;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
+  &__text {
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link {
+    @extend %btn;
+    padding: 14px 36px;
+  }
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+    margin-top: -65px;
+    li {
+      padding: 0 5px;
+      line-height: 0;
+      button{
+        padding: 0;
+        font-size: 0;
+        background-color: transparent;
+        width: 26px;
+        height: 26px;
+        border-radius: 50%;
+        border: 1px solid transparent;
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      &.slick-active {
+        button {
+          border-color: $accent;
+          &::before {
+            background-color: $accent;
+          }
+        }
+      }
+    }
+  }
+}
+
 
 
 
