--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,3 +30,18 @@ a {
   @extend %quicksand-500;
 }
 
+.title {
+  @extend %roboto-700;
+  font-size: 48px;
+  line-height: 65px;
+  text-align: center;
+  color: $title;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.text {
+  text-align: center;
+  max-width: 570px;
+  margin: 0 auto 65px;
+}
