--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -157,7 +157,7 @@
 
 .top-slider {
   background-color: $bg;
-  background-image: url(../images/slider/abstract.png);
+  background-image: url(../images/decor/abstract.png);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 65px 0 45px;
@@ -228,7 +228,419 @@
   }
 }
 
+.categories-info {
+  padding: 120px 0;
+  background-image: url(../images/decor/geometri.png);
+  background-repeat: no-repeat;
+  background-position-y: center;
+}
 
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+  position: relative;
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+  }
+  &::before {
+    background-image: url(../images/decor/before.svg);
+    top: -40px;
+    left: -45px;
+    width: 120px;
+    height: 121px;
+  }
+  &::after {
+    background-image: url(../images/decor/after.svg);
+    bottom: -23px;
+    right: -23px;
+    width: 65px;
+    height: 52px;
+  }
+  &__item {
+    background-color: #fff;
+    padding: 60px 30px;
+    max-width: 370px;
+    width: 100%;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+  }
+  &__item-title {
+    margin: 35px 0 10px;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+  }
+}
+
+.categories {
+  &__items {
+    display: grid;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+  &__item {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding-top: 35px;
+    padding-left: 40px;
+    &:nth-child(1) {
+      grid-row: span 2;
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #5800e4;
+      }
+    }
+    &:nth-child(2) {
+      grid-column: span 2;
+      padding-top: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: $accent;
+      }
+    }
+    &:nth-child(3) {
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #ffbe44;
+      }
+    }
+    &:nth-child(4) {
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #34c3ff;
+      }
+    }
+  }
+  &__item-subtitle {    
+    margin-bottom: 5px;
+  }
+  &__item-title {
+    color: $title;
+    font-size: 22px;
+    margin-bottom: 16px;
+  }
+  &__link {
+    color: $title;
+    text-transform: uppercase;
+    @extend %roboto-400;
+    transition: all 0.4s;
+  }
+}
+
+.video-fashion {
+  background-image: url(../images/decor/fasion-bg.svg);
+  background-size: coveer;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding: 125px 0;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__popup {
+    margin-right: 60px;
+    max-width: 530px;
+    height: 480px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__content {
+    max-width: 570px;
+  }
+  &__subtitle {
+    padding-top: 75px;
+    font-size: 22px;
+    color: $accent;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+  }
+  &__title {
+    text-align: left;
+  }
+  &__text {
+    margin-bottom: 55px;
+  }
+  &__link{
+    @extend %btn; 
+  }
+}
+
+.product {
+  padding: 105px 0 120px;
+  text-align: center;
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 45px 30px;
+    margin-bottom: 55px;
+  }
+  &__link {
+    display: inline-block;
+    text-transform: uppercase;
+    color: $title;
+    border: 1px solid $accent;
+    padding: 14px 27px;
+  }
+}
+
+.product-item {  
+  max-width: 370px;
+  &__img-box {
+    position: relative;
+    height: 370px;
+    overflow: hidden;
+    margin-bottom: 25px;
+  }
+  &__link-box {
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    width: 220px;
+    height: 50px;
+    margin: 0 auto;
+    border-radius: 22px;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateY(300%);
+    transition: all 0.4s;
+  }
+  &__link--line::before,
+  &__link--line::after {
+    content: "";
+    position: absolute;
+    background-color: #ececec;
+    width: 1px;
+    height: 30px;
+    top: 10px;
+  }
+  &__link--line::before {
+    left: 70px;
+  }
+  &__link--line::after {
+    right: 70px;
+  }
+  &__link {
+    display: inherit;
+    path{
+      transition: all 0.6s;
+    }
+  }
+  &__link:hover {
+    path {
+      fill: $accent;
+    }
+  }
+  &__images {
+    object-fit: cover;
+  }
+  &:hover {
+    .product-item__link-box {
+      transform: translateY(0)
+    }
+  }
+  &__title {
+    color: $title;
+    @extend %roboto-400;
+    padding: 15px 0 20px;
+  }
+  &__price {
+    display: flex;
+    justify-content: center;
+    @extend %roboto-500;
+  }
+  &__new-price {
+    padding: 0 12px;
+    color: $title;
+  }
+  &__old-price {
+    padding: 0 12px;
+    text-decoration: line-through;
+  }
+  &--sale {
+    .product-item__img-box::before{
+      content: "SALE";
+      position: absolute;
+      @extend %btn;
+      top: 25px;
+      left: 25px;
+      padding: 2px 10px;
+    }
+  }
+}
+
+.star {
+  margin: 0 auto;
+}
+
+.promo {
+  background-image: url(../images/promo-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 150px 0 160px;
+  text-align: center;
+  &__inner {
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto;
+  }
+  &__subtitle {
+    color: $accent;
+    text-transform: uppercase;
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+  &__clock {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 55px;
+  }
+  &__clock-item {
+    background-color: #fff;
+    box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    span {
+      font-size: 48px;
+      @extend %roboto-700;
+      color: $title;
+      text-align: center;
+      margin: 10px 0 7px;
+    }
+  }
+  &__text {
+    font-size: 12px;
+  }
+  &__link {
+    display: inline-block;
+    text-transform: uppercase;
+    color: $title;
+    border: 1px solid $accent;
+    padding: 14px 27px;
+    margin-top: 60px;
+  }
+}
+
+.partners {
+  padding-top: 75px;
+  &__list {
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.blog {
+  padding: 50px 0 160px;
+  background-image: url('../images/blog/blog-bg.svg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  &__items {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    right: -20px;
+    top: -25px;
+    width: 126px;
+    height: 53px;
+    background-image: url(../images/blog/blog-decor.svg);
+    z-index: -1;
+  }
+  }
+  &__item {
+    max-width: 370px;
+    width: 100%;
+    border: 1px solid #e8e8e8;
+    &:hover {
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      border: none;
+      .blog__item-link {
+        color: $accent;
+        &::after {
+          background-image: url(../images/blog/arrow-red.svg);
+        }
+      }
+    }
+  }
+  &__item-imglink {
+    display: block;
+    img {
+      width: 100%;
+      height: 280px;
+      object-fit: cover;
+    }
+  }
+  &__item-box {
+    padding: 30px 40px;
+  }
+  &__item-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  &__item-autor,  
+  &__item-date {
+    padding-left: 30px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+  &__item-autor::before {
+    background-image: url(../images/blog/icon-autor.svg);
+  }  
+  &__item-date::before {
+    background-image: url(../images/blog/icon-date.svg);
+  }
+  &__item-title {
+    color: $title;
+    font-size: 22px;
+    margin-bottom: 20px;
+    @extend %roboto-400;
+  }
+  &__item-link {
+    position: relative;
+  }
+  &__item-link::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    right: -14px;
+    width: 10px;
+    height: 8px;
+    background-image: url(../images/blog/arrow.svg);
+  }
+}
 
 
 
