--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -155,6 +155,18 @@
   }
 }
 
+.top {
+  &__container {
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 120px 0 130px;
+    text-align: center;
+  }
+}
+
 .top-slider {
   background-color: $bg;
   background-image: url(../images/decor/abstract.png);
@@ -642,7 +654,53 @@
   }
 }
 
-
+.modal {
+  max-width: 570px;
+  margin: 0 auto 115px;
+  padding-top: 100px;
+  &__links {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  &__link {
+    color: #909090;
+    font-size: 22px;
+    @extend %roboto-400;
+    margin: 0 30px;
+  }
+  &__link--active {
+    color: $accent;
+  }
+  &__label {
+    display: block;
+    margin-bottom: 30px;
+  }
+  &__input {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: $bg;
+    margin-top: 4px;
+    padding: 0 15px;
+    height: 60px;
+  }
+  &__btn {
+    background-color: $title;
+    color: #fff;
+    @extend %roboto-400;
+    text-transform: uppercase;
+    border: none;
+    display: block;
+    width: 100%;
+    padding: 14px 0;
+    cursor: pointer;
+  }
+  &__error {
+    margin-top: 12px;
+    color: $accent;
+    display: inline-block;
+  }
+}
 
 
 
