--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -410,6 +410,7 @@
 
 .product-item {  
   max-width: 370px;
+  text-align: center;
   &__img-box {
     position: relative;
     height: 370px;
@@ -735,6 +736,306 @@
     box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
   }
 }
+
+.shop {
+  padding: 120px 0 105px;
+  &__inner {
+    display: flex;
+  }
+  &__filters {
+    width: 370px;
+    margin-right: 30px;
+  }
+}
+
+.filter {
+  &__item {
+    padding: 35px 30px 40px;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+  }
+  &__title {
+    text-transform: uppercase;
+    color: $title;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 25px;
+  }
+}
+
+.filter-search {
+  &__form {
+    display: flex;
+  }
+  &__input {
+    border: none;
+    background-color: $bg;
+    width: 260px;
+    height: 50px;
+    padding: 0 5px 0 15px;
+  }
+  &__btn {
+    border: none;
+    background-color: $accent;
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
+
+.filter-price {
+  &__label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+  }
+  &__btn {
+    @extend %btn;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.irs--flat .irs-line {
+  top: 13px;
+  height: 5px;
+  background-color: #ececec;
+  border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+  top: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+
+.irs--flat .irs-handle>i:first-child {
+  display: none;
+}
+
+.irs--flat .irs-bar {
+    top: 13px;
+    height: 5px;
+    background-color: $accent;
+}
+
+.irs-from,
+.irs-to,
+.irs-single {
+  display: none;
+}
+
+.irs--flat .irs-min, .irs--flat .irs-max {
+  display: none;
+}
+
+.irs--flat {
+  height: 30px;
+}
+
+.filter-color {
+  &__label {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+    & + .filter-color__label {
+      padding-top: 20px;
+    }
+    &:last-child {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+  &__input {
+    @extend %checkbox-hidden;
+    &:checked + .filter-color__checkbox {
+      background-image: url(../images/icons/galo.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+  &__checkbox {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    margin-left: -16px;
+    margin-top: 7px;
+  }
+  &__checkbox--blue {
+    background-color: #00aeef;
+  }
+  &__checkbox--red {
+    background-color: #f52574;
+  }
+  &__checkbox--green {
+    background-color: #24d4ac;
+  }
+  &__checkbox--orange {
+    background-color: #ff7e00;
+  }
+  &__checkbox--black {
+    background-color: #000000;
+  }
+  &__checkbox--purple {
+    background-color: #923899;
+  }
+}
+
+.filter-size {
+  &__label {
+    display: block;
+    padding-left: 35px;
+    margin-bottom: 20px;
+  }
+  &__input {
+    @extend %checkbox-hidden;
+    &:checked + .filter-size__checkbox {
+      background-image: url(../images/icons/checkmark.svg);
+      border: none;
+      & +.filter-size__text {
+        color: $accent;
+      }
+    }
+  }
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid $default;
+    position: absolute;
+    margin-top: 3px;
+    margin-left: -35px;
+  }
+}
+
+.filter-category {
+  &__label {
+    display: block;
+    margin-bottom: 15px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  &__input {
+    @extend %checkbox-hidden;
+    &:checked + .filter-category__checkbox {
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+  &__checkbox {
+    background-color: #f6f6f6;
+    color: $title;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 20px;
+  }
+}
+
+.filter-popular {
+  &__title {
+    text-transform: none;
+  }
+  &__label {
+    display: inline-block;
+    margin-right: 8px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    padding: 10px 0;
+  }
+  &__input {
+     @extend %checkbox-hidden;
+    &:checked + .filter-popular__checkbox {
+      background-color: $accent;
+      border-color: $accent;
+      color: #fff;
+    }
+  }
+  &__checkbox {
+    border: 1px solid $default;
+    color: $title;
+    padding: 10px 20px;    
+  }
+}
+
+.shop-content {
+  width: 100%;
+  &__filter {
+    border: 1px solid #ececec;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__filter-buttons {
+    display: flex;
+    align-items: center;
+  }
+  &__filter-btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    margin-left: 15px;
+    line-height: 0;
+    cursor: pointer;
+    &.shop-content__filter-btn--active {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+}
+
+.jq-selectbox__select {
+  margin-left: 30px;
+  height: 32px;
+  padding: 0 30px 0 0;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  text-shadow: none;
+  color: $default;
+  @extend %quicksand-500;
+  &:hover {
+    background: transparent;
+  }
+}
+
+.jq-selectbox__trigger {
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  background-image: url(../images/icons/angle-down.svg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
